--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: python Outsider
+script: "python -m py_compile Outsider.py"
