owned shares investment values

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 {
-    "current money": 24.0,
+    "current money": 0.14549999999999375,
     "TEST MODE": true,
     "price limit": 1.0,
     "max investment per comp": 1.0
